don't always show integer part for fraction formats with hard denom fdo#56205

fixes bug when you have a fraction format with a forced denominator e.g. '?/5'
which showed the integer part of the fraction ( as if the format was '# ?/5' )
but even without the space
e.g. before fix
pi 3.14159265358979 with format '?/8' would be shown as "31/8"

after the fix
   3.14159265358979 with format '?/8' would be shown as "25/8"

Change-Id: I1feb8b78af94b90db1bcc30da248077243dd8dfc
Reviewed-on: https://gerrit.libreoffice.org/1047
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>